apps/infra/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - argocd.51.159.207.81.nip.io
      secretName: argocd-tls

  rules:
    - host: argocd.51.159.207.81.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
